apps/overlays/dev/patch/sample-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-app
  labels:
    app: dev-sample-app
spec:
  selector:
    matchLabels:
      deployment: dev-sample-app
  template:
    metadata:
      labels:
        deployment: dev-sample-app
        app: dev-sample-app
    spec:
      containers:
        - name: sample-app
          image: image-registry.openshift-image-registry.svc:5000/jiadchen-dev/sample-app:988d47cdf5cadc7ad2105a54451d689101687125
