apps/overlays/dev/patch/sample-app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sample-app
  labels:
    route: dev-sample-app
spec:
  to:
    kind: Service
    name: dev-sample-app
